fix home page padding under hero; not sure why the spacing got tighter
git-svn-id: https://svn.library.cornell.edu/efraimrackertheme/trunk@197 9597bc91-b0d9-4081-9644-6f6672fb8dfc

--- a/css/_home.scss
+++ b/css/_home.scss
@@ -55,7 +55,7 @@
 /*------------------------------*/
 
 .featured-content {
-	padding: 40px 0;
+	padding: 60px 0 40px 0;
 	background: white;
 	margin-top: -50px;
 	h3 {
