--- a/css/style.css
+++ b/css/style.css
@@ -2234,7 +2234,7 @@ form.webform-client-form {
 /* Featured content */
 /*------------------------------*/
 .featured-content {
-  padding: 40px 0;
+  padding: 60px 0 40px 0;
   background: white;
   margin-top: -50px; }
   .featured-content h3 {
